# cv_assembly_line

./: CMakeLists.txt  README.md  task_1.sh  task_2.sh
src/: rect_detect1.cpp  rect_detect2.cpp
